# act

./: .envrc  .gitignore  .gitmodules  .hlint.yaml  .travis  404.html  DEVELOPER.md  Makefile  README.md  act.cabal  backends.html  coq.html  default.nix  flake.nix  funding.json  hevm.html  hie.yaml  index.html  internals.html  introduction.html  language.html  print.html  searchindex.js  searchindex.json  shell.nix  smt.html
.github/workflows/: build.yml  deploy-book.yaml  test.yml
doc/: book.toml
doc/src/: SUMMARY.md  backends.md  coq.md  equiv.md  hevm.md  internals.md  introduction.md  language.md  smt.md
docs/: act.md  decompilation.md  smt.md
examples/binarySearch/: binarySearch.act
examples/contractCreation/: modest.act  modest.sol
examples/deposit/: deposit-spec.md
examples/exponent/: .gitignore  Makefile  Theory.v  _CoqProject  exponent.act
examples/homogeneous/: #homogeneous.act#  Homogeneous.v  README.md  Theory.v  _CoqProject  homogeneous.act  homogeneous.smt2  homogeneous.sol  statemachinequery.smt2
examples/increment/: Increment.v  Theory.v  _CoqProject  increment.sol  increment.v  spec.md  theory.v
examples/multipleContracts/: multi.act  multi.sol
examples/rounding/: Pool.sol  pool.act.md  readme.md
examples/safemath/: .gitignore  Makefile  Theory.v  _CoqProject
examples/transitions/: .gitignore  Makefile  Theory.v  _CoqProject  constant.md  increment.act  invariant.md  invariant.sol  safemath.act  safemath.md  state_machine.act  state_machine.sol  transfer.act  transfer.md
lib/: ActLib.v
nix/: sources.json
src/: Analysis.hs  CLI.hs  Consistency.hs  Consistent.hs  Coq.hs  Decompile.hs  Dev.hs  Enrich.hs  ErrM.hs  Error.hs  ErrorLogger.hs  Eval.hs  Extract.hs  HEVM.hs  HEVM_utils.hs  K.hs  Lex.x  Main.hs  Makefile  Parse.y  Print.hs  Prove.hs  README.md  RefinedAst.hs  RefinedSyntax.hs  SMT.hs  Splitter.hs  Syntax.hs  TH.hs  Traversals.hs  Type.hs  Util.hs  Utils.hs  Yul.hs  YulEdsl.hs  act.cabal  act.cf  cabal.project  default.nix  erc20.hs  (+5 more)
src/Act/: Bounds.hs  CLI.hs  Consistency.hs  Coq.hs  Decompile.hs  Dev.hs  Enrich.hs  Error.hs  HEVM.hs  HEVM_utils.hs  Lex.x  Makefile  Parse.y  Print.hs  SMT.hs  Syntax.hs  Traversals.hs  Type.hs
src/Act/Syntax/: Annotated.hs  TimeAgnostic.hs  Timing.hs  Typed.hs  TypedExplicit.hs  TypedImplicit.hs  Types.hs  Untyped.hs
src/CLI/: Main.hs
src/Syntax/: Annotated.hs  Refined.hs  TimeAgnostic.hs  Timing.hs  Typed.hs  Types.hs  Untyped.hs
src/Test/: Decompile.hs  Main.hs
src/haskell/: AbsAct.hi  AbsAct.hs  DocAct.txt  ErrM.hi  ErrM.hs  LexAct.hi  LexAct.hs  LexAct.x  Makefile  ParAct.hi  ParAct.hs  ParAct.info  ParAct.y  ParAct.y.bak  PrintAct.hi  PrintAct.hs  README.md  SkelAct.hi  SkelAct.hs  Splitter.hs  TestAct  TestAct.hi  TestAct.hs  act.cabal  default.nix  shell.nix
src/latex/: Makefile  act.tex
src/main/: Main.hs
src/test/: DecompileTest.hs  Test.hs  a.act
tests/array/: array.act.parsed.hs
tests/coq/ERC20/: Makefile  Theory.v  erc20.act
tests/coq/ERC20-simple/: .gitignore  Makefile  Theory.v  _CoqProject  erc20.act
tests/coq/exponent/: Makefile  Theory.v  _CoqProject  exponent.act  exponent.sol
tests/coq/multi/: .gitignore  Makefile  Theory.v  _CoqProject  multi.act
tests/coq/safemath/: Makefile  Theory.v  _CoqProject  safemath.act
tests/coq/strings/: strings.act
tests/coq/token/: .gitignore  Makefile  Theory.v  _CoqProject  token.act
tests/coq/transitions/: Makefile  Theory.v  _CoqProject  state_machine.act  state_machine.smt2
tests/creation/: create.act  create.act.parsed.hs  create.act.typed.json  createMultiple.act  createMultiple.act.parsed.hs
tests/dss/: vat.act  vat.act.parsed.hs
tests/frontend/array/: array.act.parsed.hs
tests/frontend/creation/: create.act  create.act.parsed.hs  createMultiple.act  createMultiple.act.parsed.hs
tests/frontend/dss/: vat.act  vat.act.parsed.hs
tests/frontend/env/: all_env_vars.act
tests/frontend/fail/: case-fail1.act  case-fail2.act  cast.act  cycle.act  cycle2.act  mapping_aliasing.act  missingdef0.act  missingdef1.act  missingdef2.act  three_behaviours.act  timed_calldata.act  two_behaviours.act  two_interfaces.act  untimed_entry.act  var_aliasing.act
tests/frontend/multi/: multi.act  multi.act.parsed.hs  multi.act.typed.json
tests/frontend/pass/: negative-literals.act  storageread0.act  storageread1.act  storageread2.act  strings.act  two_behaviours_on_two_contracts.act
tests/frontend/safemath/: safemath.sol  safemathraw.act.typed.json
tests/frontend/smoke/: smoke.act.parsed.hs  smoke.act.parsed.hs.custom
tests/frontend/token/: token.sol  token.sol.json  transfer.act.parsed.hs  transfer.act.typed.json
tests/hevm/bug/: bug.act  bug.sol
tests/hevm/multi4/: multi4.act  multi4.sol
tests/hevm/pass/: names.act
tests/invariants/: homogeneous.act.parsed.hs  homogeneous.act.typed.json
tests/invariants/fail/: all_types.act  concretebase.act  concreteexponent.act  constructor-type-bounds.act  constructor_indirect_assignment.act  constructor_self_reference.act  duplicated_argument_name.act  ethEnv.act  non-inductive.act  symbolicexponent.act
tests/invariants/pass/: all_types.act  amm-full.act  amm.act  case.act  concretebase.act  concreteexponent.act  constructor-type-bounds.act  ethEnv.act  homogeneous.act  ite.act  log.act  mappings.act  mutex.act  state_machine.act  type_constraints.act  type_constraints_env.act
tests/multi/: multi.act  multi.act.parsed.hs  multi.act.typed.json
tests/postconditions/fail/: aliasing.act  bad_assignment.act  bad_assignment_prestate.act
tests/postconditions/pass/: amm.act  assignment.act  case.act  (+5 more)
tests/safemath/: safemath.sol.json  safemathraw.act  safemathraw.act.ir.json  safemathraw.act.parsed.hs  safemathraw.act.parsed.hs.custom  safemathraw.act.typed.json
tests/smoke/: smoke.act  smoke.act.parsed.hs  smoke.act.typed.json
tests/token/: token.sol  transfer-mini.act.ir.json  transfer-mini.act.parsed.custom.hs  transfer-mini.act.parsed.hs  transfer.act  transfer.act.parsed.hs  transfer.act.typed.json
tools/: act.py  respec  solidity_to_act.py
(+164 files in other folders)
