cabal-version: 2.2

name:       act
version:    0.1.0.0
author:     Martin Lundfall
maintainer: martin.lundfall@protonmail.com

flag ci
    description: Sets flags for compilation in CI
    default:     False
    manual:      True

common deps
  build-depends: base             >= 4.9 && < 5,
                 aeson            >= 1.0,
                 containers       >= 0.5,
                 hevm             >= 0.37,
                 lens             >= 4.17.1,
                 text             >= 1.2,
                 array            >= 0.5.3.0,
                 optparse-generic >= 1.3,
                 vector           >= 0.12.0.3,
                 bytestring       >= 0.10.8,
                 sbv              >= 8.4,
                 mtl              >= 2.2.2,
                 utf8-string      >= 1.0.1.1
  other-modules: Lex ErrM Extract Parse RefinedAst K HEVM Coq Syntax Type Prove Print Enrich SMT
  if flag(ci)
      ghc-options: -O2 -Wall -Werror -Wno-orphans
  else
      ghc-options: -Wall -Wno-orphans

executable act
  import:             deps
  main-is:            Main.hs
  build-tool-depends: happy:happy, alex:alex
  hs-source-dirs:     .
  default-language:   Haskell2010

Test-Suite test
  import:           deps
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Test.hs
  hs-source-dirs:   test, .
  build-depends:    pretty-simple        >= 2.2,
                    quickcheck-instances >= 0.3,
                    tasty-hunit          >= 0.10,
                    tasty-quickcheck     >= 0.10,
                    tasty                >= 1.2
