cabal-version: 2.2

name:       act
version:    0.1.0.0
author:     Martin Lundfall
maintainer: martin.lundfall@protonmail.com

flag ci
    description: Sets flags for compilation in CI
    default:     False
    manual:      True

common deps
  build-depends: base             >= 4.9 && < 5,
                 aeson            >= 1.0,
                 containers       >= 0.5,
                 hevm             >= 0.47.1 && < 0.48,
                 lens             >= 4.17.1,
                 text             >= 1.2,
                 array            >= 0.5.3.0,
                 optparse-generic >= 1.3,
                 vector           >= 0.12.0.3,
                 bytestring       >= 0.10.8,
                 sbv              >= 8.4,
                 mtl              >= 2.2.2,
                 utf8-string      >= 1.0.1.1,
                 process          >= 1.6.5.0,
                 ansi-wl-pprint   >= 0.6.9,
                 regex-tdfa
  other-modules: Lex ErrM Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Annotated Syntax.Timing Syntax.TimeAgnostic Type Print Enrich SMT
  
  if flag(ci)
      ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
  else
      ghc-options: -Wall -Wno-orphans -Wno-unticked-promoted-constructors

executable act
  import:             deps
  main-is:            Main.hs
  build-tool-depends: happy:happy, alex:alex
  hs-source-dirs:     .
  default-language:   Haskell2010

Test-Suite test
  import:           deps
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Test.hs
  hs-source-dirs:   test, .
  build-depends:    pretty-simple          >= 2.2,
                    quickcheck-instances   >= 0.3,
                    quickcheck-transformer >= 0.3,
                    tasty-hunit            >= 0.10,
                    tasty-quickcheck       >= 0.10,
                    QuickCheck             >= 2.13.2,
                    tasty                  >= 1.2
