cabal-version: 2.2

name:       act
version:    0.1.0.0
author:     Martin Lundfall
maintainer: martin.lundfall@protonmail.com

flag ci
    description: Sets flags for compilation in CI
    default:     False
    manual:      True

common deps
  build-depends: base               >= 4.9 && < 5,
                 aeson              >= 1.0,
                 containers         >= 0.5,
                 hevm               ,
                 -- hevm version has an ugly upper bound to
                 -- force usage of version from nix-shell,
                 -- which avoids weird missing deps when
                 -- pulling it from hackage.
                 lens               >= 4.17.1,
                 text               >= 1.2,
                 array              >= 0.5.3.0,
                 optparse-generic   >= 1.3,
                 vector             >= 0.12.0.3,
                 bytestring         >= 0.10.8,
                 mtl                >= 2.2.2,
                 utf8-string        >= 1.0.1.1,
                 process            >= 1.6.5.0,
                 ansi-wl-pprint     >= 0.6.9,
                 regex-tdfa,
                 validation         >= 1.1.1,
                 ordered-containers >= 0.2.3,
                 extra,
                 singletons,
                 deriving-compat
  if flag(ci)
      ghc-options: -O2 -Wall -Werror -Wno-orphans -Wno-unticked-promoted-constructors
  else
      ghc-options: -Wall -Wno-orphans -Wno-unticked-promoted-constructors

library act-internal
  import:             deps
  build-tool-depends: happy:happy, alex:alex
  hs-source-dirs:     .
  default-language:   Haskell2010
  exposed-modules:    CLI Error Print SMT Syntax.Annotated
  other-modules:      Lex Parse K HEVM Coq Syntax Syntax.Untyped Syntax.Typed Syntax.Types Syntax.Timing Syntax.TimeAgnostic Type Enrich Dev

executable act
  import:             deps
  main-is:            Main.hs
  hs-source-dirs:     main
  default-language:   Haskell2010
  build-depends:      act-internal

Test-Suite test
  import:           deps
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Test.hs
  hs-source-dirs:   test
  build-depends:    act-internal,
                    pretty-simple          >= 2.2,
                    quickcheck-instances   >= 0.3,
                    quickcheck-transformer >= 0.3,
                    tasty-hunit            >= 0.10,
                    tasty-quickcheck       >= 0.10,
                    QuickCheck             >= 2.13.2,
                    tasty                  >= 1.2
